# rag-research

./: README.md  main.py
ai_model/: grok_interaction.py
vecdb/: Cargo.toml  init.sql  modal_app.py  modal_db.py  pyproject.toml  readme.MD
vecdb/python/: app.py
vecdb/src/: lib.rs
