[package]
name = "vecdb"
version = "0.1.0"
edition = "2024"

[lib]
name = "vector-core"
crate-type = ["cdylib"] # for python

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
cuvs = "0.3"
raft = "24.10"
cust = "0.3"
cuda = "0.1"